external css file link demo with priority notes of styling

--- a/cssBasics/externalstyling.html
+++ b/cssBasics/externalstyling.html
@@ -1,3 +1,7 @@
+<!-- Priority of styling in Descending order
+Inline 
+Internal (style in head)
+External css file -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
