background color practice file

--- a/colorSystemBackground/backgroundColor.html
+++ b/colorSystemBackground/backgroundColor.html
@@ -16,6 +16,9 @@
     </style>
   </head>
   <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, eaque?
+    </p>
     <div class="color">Background color</div>
   </body>
 </html>
