--- a/textProperties/fontWeight.html
+++ b/textProperties/fontWeight.html
@@ -11,6 +11,7 @@
     </style>
   </head>
   <body>
+    <p>Lorem, ipsum.</p>
     <p class="article">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
       exercitationem quae vel asperiores sint magni?
