--- a/textProperties/lineHeight.html
+++ b/textProperties/lineHeight.html
@@ -11,6 +11,8 @@
     </style>
   </head>
   <body>
+    <p>Lorem, ipsum.</p>
+
     <p class="article">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
       exercitationem quae vel asperiores sint magni?
