text align practice file

--- a/textProperties/textAlign.html
+++ b/textProperties/textAlign.html
@@ -20,6 +20,8 @@
   </head>
 
   <body>
+    <p>Lorem, ipsum.</p>
+
     <div id="box1" class="box">Box1</div>
     <div id="box2" class="box">Box2</div>
   </body>
