text decoration  practice file 1.1

--- a/textProperties/textDecoration.html
+++ b/textProperties/textDecoration.html
@@ -16,6 +16,8 @@
   </head>
 
   <body>
+    <p>Lorem, ipsum.</p>
+
     <h1 id="head">This is heading</h1>
     <a id="link" href="#">click here</a>
   </body>
