--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Myntra Project Css</title>
+    <title>Myntra Project-Css</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo_container">Logo</div>
+      <nav class="nav_bar">Nav</nav>
+      <div class="search_bar">Search</div>
+      <div class="action_bar">Actions</div>
+    </header>
+    <main>
+      <div class="banner_container">Banner Container</div>
+      <div class="category_heading">Category Heading</div>
+      <div class="category_items">Category Items</div>
+    </main>
+    <footer>Footer</footer>
+  </body>
 </html>
