--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <header>
-      <div class="logo_container">Logo</div>
+      <div class="logo_container">
+        <a href="#"
+          ><img
+            class="myntra_home"
+            src="images/myntra_logo.webp"
+            alt="myntra logo"
+        /></a>
+      </div>
       <nav class="nav_bar">Nav</nav>
       <div class="search_bar">Search</div>
       <div class="action_bar">Actions</div>
