--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -16,7 +16,14 @@
             alt="myntra logo"
         /></a>
       </div>
-      <nav class="nav_bar">Nav</nav>
+      <nav class="nav_bar">
+        <a href="#">Men</a>
+        <a href="#">Women</a>
+        <a href="#">Kids</a>
+        <a href="#">Home & Living</a>
+        <a href="#">Beauty</a>
+        <a href="#">Studio <sup>New</sup></a>
+      </nav>
       <div class="search_bar">Search</div>
       <div class="action_bar">Actions</div>
     </header>
