added span tag and input tag with placeholder

--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -29,7 +29,13 @@
         <a href="#">Beauty</a>
         <a href="#">Studio <sup>New</sup></a>
       </nav>
-      <div class="search_bar">Search</div>
+      <div class="search_bar">
+        <span class="material-symbols-outlined"> search </span>
+        <input
+          class="search_bar"
+          placeholder="Search for products, brands and more"
+        />
+      </div>
       <div class="action_bar">Actions</div>
     </header>
     <main>
