--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -32,7 +32,7 @@
       <div class="search_bar">
         <span class="material-symbols-outlined search_icon"> search </span>
         <input
-          class="search_bar"
+          class="search_input"
           placeholder="Search for products, brands and more"
         />
       </div>
