created action container and span for profile,bag,wishlist and linked respective icons

--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -36,7 +36,22 @@
           placeholder="Search for products, brands and more"
         />
       </div>
-      <div class="action_bar">Actions</div>
+      <div class="action_bar">
+        <div class="action_container">
+          <span class="material-symbols-outlined action_icon"> person </span>
+          <span class="action_name">Profile</span>
+        </div>
+        <div class="action_container">
+          <span class="material-symbols-outlined action_icon"> favorite </span>
+          <span class="action_name">Wishlist</span>
+        </div>
+        <div class="action_container">
+          <span class="material-symbols-outlined action_icon">
+            shopping_bag
+          </span>
+          <span class="action_name">Bag</span>
+        </div>
+      </div>
     </header>
     <main>
       <div class="banner_container">Banner Container</div>
