--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -38,23 +38,25 @@
       </div>
       <div class="action_bar">
         <div class="action_container">
-          <span class="material-symbols-outlined action_icon"> person </span>
+          <span class="material-symbols-outlined action_icon">person</span>
           <span class="action_name">Profile</span>
         </div>
         <div class="action_container">
-          <span class="material-symbols-outlined action_icon"> favorite </span>
+          <span class="material-symbols-outlined action_icon">favorite</span>
           <span class="action_name">Wishlist</span>
         </div>
         <div class="action_container">
-          <span class="material-symbols-outlined action_icon">
-            shopping_bag
-          </span>
+          <span class="material-symbols-outlined action_icon"
+            >shopping_bag</span
+          >
           <span class="action_name">Bag</span>
         </div>
       </div>
     </header>
     <main>
-      <div class="banner_container">Banner Container</div>
+      <div class="banner_container">
+        <img class="banner_image" src="images/banner.jpg" alt="main banner" />
+      </div>
       <div class="category_heading">Category Heading</div>
       <div class="category_items">Category Items</div>
     </main>
