category heading done

--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -57,7 +57,7 @@
       <div class="banner_container">
         <img class="banner_image" src="images/banner.jpg" alt="main banner" />
       </div>
-      <div class="category_heading">Category Heading</div>
+      <div class="category_heading">Medals Worthy Brands To Bag</div>
       <div class="category_items">Category Items</div>
     </main>
     <footer>Footer</footer>
