--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -58,7 +58,20 @@
         <img class="banner_image" src="images/banner.jpg" alt="main banner" />
       </div>
       <div class="category_heading">Medals Worthy Brands To Bag</div>
-      <div class="category_items">Category Items</div>
+      <div class="category_items">
+        <a href="#"><img class="sale_item" src="images/offers/1.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/2.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/3.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/4.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/5.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/6.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/7.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/8.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/9.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/10.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/11.png" /></a>
+        <a href="#"><img class="sale_item" src="images/offers/12.png" /></a>
+      </div>
     </main>
     <footer>Footer</footer>
   </body>
