footer done and this completes css project of myntra clone

--- a/myntraProject/index.html
+++ b/myntraProject/index.html
@@ -25,7 +25,6 @@
         <a href="#">Women</a>
         <a href="#">Kids</a>
         <a href="#">Home & Living</a>
-
         <a href="#">Beauty</a>
         <a href="#">Studio <sup>New</sup></a>
       </nav>
@@ -87,6 +86,44 @@
         <a href="#"><img class="sale_item" src="images/categories/10.jpg" /></a>
       </div>
     </main>
-    <footer>Footer</footer>
+    <footer>
+      <div class="footer_container">
+        <div class="footer_column">
+          <h3>Online shopping</h3>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">Kids</a>
+          <a href="#">Home & Living</a>
+          <a href="#">Beauty</a>
+          <a href="#">Gift Card</a>
+          <a href="#">Myntra Insider</a>
+        </div>
+
+        <div class="footer_column">
+          <h3>Online shopping</h3>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">Kids</a>
+          <a href="#">Home & Living</a>
+          <a href="#">Beauty</a>
+          <a href="#">Gift Card</a>
+          <a href="#">Myntra Insider</a>
+        </div>
+        <div class="footer_column">
+          <h3>Online shopping</h3>
+          <a href="#">Men</a>
+          <a href="#">Women</a>
+          <a href="#">Kids</a>
+          <a href="#">Home & Living</a>
+          <a href="#">Beauty</a>
+          <a href="#">Gift Card</a>
+          <a href="#">Myntra Insider</a>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright">
+        © myntra clone css practice.No rights reserved
+      </div>
+    </footer>
   </body>
 </html>
